// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`config/presets/local/index getPreset() forwards to azure 1`] = `
Array [
  Array [
    "some/repo",
    "default",
    undefined,
    undefined,
  ],
]
`;

exports[`config/presets/local/index getPreset() forwards to azure 2`] = `
Object {
  "resolved": "preset",
}
`;

exports[`config/presets/local/index getPreset() forwards to bitbucket 1`] = `
Array [
  Array [
    "some/repo",
    "default",
    undefined,
    undefined,
  ],
]
`;

exports[`config/presets/local/index getPreset() forwards to bitbucket 2`] = `
Object {
  "resolved": "preset",
}
`;

exports[`config/presets/local/index getPreset() forwards to custom bitbucket-server 1`] = `
Array [
  Array [
    "some/repo",
    "default",
    undefined,
    "https://git.example.com",
  ],
]
`;

exports[`config/presets/local/index getPreset() forwards to custom bitbucket-server 2`] = `
Object {
  "resolved": "preset",
}
`;

exports[`config/presets/local/index getPreset() forwards to custom gitea 1`] = `
Array [
  Array [
    "some/repo",
    "default",
    undefined,
    "https://api.gitea.example.com",
  ],
]
`;

exports[`config/presets/local/index getPreset() forwards to custom gitea 2`] = `
Object {
  "resolved": "preset",
}
`;

exports[`config/presets/local/index getPreset() forwards to custom github 1`] = `
Array [
  Array [
    "some/repo",
    "default",
    undefined,
    "https://api.github.example.com",
  ],
]
`;

exports[`config/presets/local/index getPreset() forwards to custom github 2`] = `
Object {
  "resolved": "preset",
}
`;

exports[`config/presets/local/index getPreset() forwards to custom gitlab 1`] = `
Array [
  Array [
    "some/repo",
    "default",
    undefined,
    "https://gitlab.example.com/api/v4",
  ],
]
`;

exports[`config/presets/local/index getPreset() forwards to custom gitlab 2`] = `
Object {
  "resolved": "preset",
}
`;

exports[`config/presets/local/index getPreset() forwards to gitea 1`] = `
Array [
  Array [
    "some/repo",
    "default",
    undefined,
    undefined,
  ],
]
`;

exports[`config/presets/local/index getPreset() forwards to gitea 2`] = `
Object {
  "resolved": "preset",
}
`;

exports[`config/presets/local/index getPreset() forwards to github 1`] = `
Array [
  Array [
    "some/repo",
    "default",
    undefined,
    undefined,
  ],
]
`;

exports[`config/presets/local/index getPreset() forwards to github 2`] = `
Object {
  "resolved": "preset",
}
`;

exports[`config/presets/local/index getPreset() forwards to gitlab 1`] = `
Array [
  Array [
    "some/repo",
    "default",
    undefined,
    undefined,
  ],
]
`;

exports[`config/presets/local/index getPreset() forwards to gitlab 2`] = `
Object {
  "resolved": "preset",
}
`;
